fix too long username and too many entry

--- a/popup.css
+++ b/popup.css
@@ -98,7 +98,6 @@ button:hover {
 
 #current-item-list,
 #all-item-list {
-  max-height: 150px;
   overflow: visible;
 }
 
